--- a/index.html
+++ b/index.html
@@ -5,8 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
-	<link rel="icon" type="image/x-icon" href="icons/icon.png">
+    <link rel="icon" type="image/x-icon" href="icons/icon.png">
     <title>Dev Pickleft.</title>
+    <meta content="Pickleft Dev." property="og:title" />
+    <meta content="Official Pickleft's Personal Page." property="og:description" />
+    <meta content="https://pickleft.world/" property="og:url" />
+    <meta content="icons/icon.png" property="og:image" />
+    <meta content="#39a6ff" data-react-helmet="true" name="theme-color" />
 </head>
 <body>
     <div class="grid-2">
