--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
             <h2>Experience & Projects</h2>
             <a href="https://agencytool.io">Software engineer for Agency Tool.</a>
             <a href="https://golden.ml">Ex-Software Security Manager for Golden.</a>
-            <a href="http://getswift.tk">Software engieener of the well-know Swift AutoClicker.</a>
-            <a href="http://github.com/Pickleft/Window-Manager">Software engieener of the Windows GUI (Automation / Editor) Library.</a>
+            <a href="http://getswift.tk">Software engineer of the well-known Swift AutoClicker.</a>
+            <a href="http://github.com/Pickleft/Window-Manager">Software engineer of the Windows GUI (Automation / Editor) Library.</a>
             <h2>Email</h2>
             <p>pickleft123@gmail.com</p>
         </div>
